--- a/app/styles/common/buttons.scss
+++ b/app/styles/common/buttons.scss
@@ -19,6 +19,10 @@
   box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
 }
 
+.button {
+  font-family: Montserrat-Light;
+}
+
 .button-primary,
 .button-primary.button-full,
 .button-primary.activated {
