--- a/app/templates/billing-addresses/new-edit.jade
+++ b/app/templates/billing-addresses/new-edit.jade
@@ -98,4 +98,5 @@ ion-modal-view.item-page
 
       .bar.bar-footer
         row.col.text-center
-          button.action-button.yellow(type="submit") {{::("globals.save"|translate)}}
+          button.action-button.yellow(type="submit")
+            | {{::("globals.save"|translate)}}
