--- a/app/templates/directives/show-error/show-error.jade
+++ b/app/templates/directives/show-error/show-error.jade
@@ -1,1 +1,3 @@
-span.message-error {{ seVm.joinedMessages }}
+span.message-error(
+  ng-repeat='message in seVm.arrayMessages track by $index'
+) {{ message }}.
