--- a/app/templates/dispatchers/new-edit.jade
+++ b/app/templates/dispatchers/new-edit.jade
@@ -1,21 +1,20 @@
-ion-modal-view.item-page
-  ion-header-bar.bar-stable.bar.bar-header(
-    align-title="center"
-  )
-    .ion-nav-buttons(side="left")
-      button.button.ion-chevron-left.button-clear.left(
-        ng-click="dispatchersVm.closeDispatcher()"
-      )
+ion-modal-view
+  ion-header-bar.bar-stable.bar.bar-header
     .title.alt-logo
-  ion-content.resource-form
-    form(
-      name='dispatchersVm.form'
-      ng-submit='dispatchersVm.submitDispatcher()'
-      novalidate
-    )
+    
+    .ion-nav-buttons.buttons(side="primary")
+      button.button.button-clear.button-positive(
+        ng-click="dispatchersVm.closeDispatcher()"
+      ) {{::('globals.cancel'|translate)}}
+
+  form(
+    name='dispatchersVm.form'
+    ng-submit='dispatchersVm.submitDispatcher()'
+    novalidate
+  )
+    ion-content.resource-form
       .list.list-inset
-        legend(ng-if ="!dispatchersVm.dispatcher.id").title {{::("globals.new"|translate)}} {{::("dispatchers.dispatcher"|translate)}}
-        legend(ng-if ="dispatchersVm.dispatcher.id").title {{::("globals.edit"|translate)}} {{::("dispatchers.dispatcher"|translate)}}
+        legend {{::("dispatchers.dispatcher"|translate)}}
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': dispatchersVm.form.email.$touched && dispatchersVm.form.email.$invalid}"
@@ -28,10 +27,11 @@ ion-modal-view.item-page
             ng-model="dispatchersVm.dispatcher.email",
             required
           )
+        .errors-wrapper
           .show-errors(ng-messages="dispatchersVm.form.email.$error" ng-if="dispatchersVm.form.email.$touched")
             span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
             span.message-error(ng-message="email") {{::("form.wrongEmail"|translate)}}
-        show-error(array-messages="dispatchersVm.messages.email")
+          show-error(array-messages="dispatchersVm.messages.email")
 
         label.item.item-input.item-select(
           ng-class="{'item-error': dispatchersVm.form.provider_office_id.$touched && dispatchersVm.form.provider_office_id.$invalid}"
@@ -41,12 +41,13 @@ ion-modal-view.item-page
                 name="provider_office_id"
                 ng-options="item.id as item.direccion for item in dispatchersVm.offices"
                 required)
+        .errors-wrapper
           .show-errors(ng-messages="dispatchersVm.form.provider_office_id.$error" ng-if="dispatchersVm.form.provider_office_id.$touched")
             span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
-        show-error(array-messages="dispatchersVm.messages.provider_office_id")
+          show-error(array-messages="dispatchersVm.messages.provider_office_id")
 
-      .bar.bar-footer
-        .row.col.text-center
-          button.action-button.yellow(
-            type="submit"
-          ) {{::("globals.save"|translate)}}
+    .bar.bar-footer.bar-stable
+      button.button.button-small.button-outline.button-energized(
+        type="submit"
+        ng-disabled="dispatchersVm.form.$invalid"
+      ) {{::("globals.save"|translate)}}
