--- a/app/templates/item/items.jade
+++ b/app/templates/item/items.jade
@@ -3,7 +3,7 @@ ion-view(
 )
   ion-nav-title
     .alt-logo
-  ion-content.item-index-page
+  ion-content.item-index-page.resource-collection
     .row
       label.item.search-input
         i.icon.ion-search.placeholder-icon
@@ -16,11 +16,11 @@ ion-view(
     .row
       .list.list--centered
         button.button.button-outline.button-energized(
-          ng-click="itemsVm.launchModal()"
+          ng-click="itemsVm.newItemModal()"
         ) {{::("globals.new"|translate)}} {{::("item.item"|translate)}}
 
-    .list.list-inset.list--no-borders
-      .row.item.table-headers
+    .list.list-inset.list--no-borders.resource-collection-table
+      .row.table-headers
         .col.col-60 {{::("item.productName"|translate)}}
         .col.col-15 {{::("item.quantity"|translate)}}
         .col.col-25 {{::("item.price"|translate)}}
@@ -30,13 +30,12 @@ ion-view(
         p {{::("item.subtitleWithoutItems"|translate)}}
 
       .item.row(
-        ng-repeat="item in itemsVm.items | filter:itemsVm.query"
-        ng-init="idx = $index"
+        ng-repeat="item in itemsVm.items | filter:itemsVm.query track by $index"
       )  
         .col.col-60
-          .provider-item-title(
-            ng-click="itemsVm.showEditModal(idx)"
-          ) {{ item.titulo }}
+          a.provider-item-title(
+            ui-sref="provider.items.show({id: item.id})"
+          ) {{ ::item.titulo }}
         .col.col-15
-          span(ng-if="item.unidad_medida=='unidades'") X {{ item.volumen }}
-        .col.col-25 $ {{ item.precio_cents/100 }}
+          span(ng-if="item.unidad_medida=='unidades'") X {{ ::item.volumen }}
+        .col.col-25 $ {{ ::item.precio_cents/100 }}
