--- a/app/templates/item/new-edit.jade
+++ b/app/templates/item/new-edit.jade
@@ -1,16 +1,15 @@
 ion-modal-view.item-form
   ion-header-bar.bar-stable.bar.bar-header
     .title.alt-logo
-    
+
     .ion-nav-buttons.buttons(side="primary")
-      button.button.button-clear(
-        ng-click="itemsVm.closeModal()"
+      button.button.button-clear.button-positive(
+        ng-click="modalVm.closeModal()"
       ) {{::('globals.cancel'|translate)}}
-    
 
   form(
-    name='itemsVm.itemForm'
-    ng-submit='itemsVm.submitProcess(itemsVm.item.id)'
+    name='modalVm.itemForm'
+    ng-submit='modalVm.submitProcess()'
     novalidate
   )
     ion-content.resource-form
@@ -18,60 +17,64 @@ ion-modal-view.item-form
         legend {{::("item.formLegend"|translate)}}
 
         label.item.item-input.item-stacked-label(
-          ng-class="{'item-error': itemsVm.itemForm.titulo.$touched && itemsVm.itemForm.titulo.$invalid}"
+          ng-class="{'item-error': modalVm.itemForm.titulo.$touched && modalVm.itemForm.titulo.$invalid}"
         )
           span.input-label {{::("item.titulo"|translate)}}
           input(
             name='titulo'
             type='text'
-            ng-model='itemsVm.item.titulo'
+            ng-model='modalVm.item.titulo'
             ng-class='input-error'
             required
           )
         .errors-wrapper    
-          .show-errors(ng-messages="itemsVm.itemForm.titulo.$error" ng-if="itemsVm.itemForm.titulo.$touched")
-            span(ng-message="required" class="message-error") {{::("globals.isRequired"|translate)}}
-          show-error(array-messages='itemsVm.messages.titulo')
+          .show-errors(ng-messages="modalVm.itemForm.titulo.$error" ng-if="modalVm.itemForm.titulo.$touched")
+            span.message-error(ng-message="required")
+              | {{::("globals.isRequired"|translate)}}
+          show-error(array-messages='modalVm.messages.titulo')
 
         label.item.item-input.item-stacked-label
           span.input-label {{::("item.descripcion"|translate)}}
           input(
             type='text'
-            ng-model='itemsVm.item.descripcion'
+            ng-model='modalVm.item.descripcion'
           )
-        show-error(array-messages='itemsVm.messages.descripcion')
+        .errors-wrapper
+          show-error(array-messages='modalVm.messages.descripcion')
 
         label.item.item-input.item-stacked-label
           span.input-label {{::("item.observaciones"|translate)}}
           input(
             type='text'
-            ng-model='itemsVm.item.observaciones'
+            ng-model='modalVm.item.observaciones'
           )
-        show-error(array-messages='itemsVm.messages.observaciones')
+        .errors-wrapper
+          show-error(array-messages='modalVm.messages.observaciones')
 
         label.item.item-input.item-select(
-          ng-class="{'item-error': itemsVm.itemForm.unidad_medida.$touched && itemsVm.itemForm.unidad_medida.$invalid}"
+          ng-class="{'item-error': modalVm.itemForm.unidad_medida.$touched && modalVm.itemForm.unidad_medida.$invalid}"
         )
           span.input-label {{::("item.unidadMedida"|translate)}}
-          select(ng-model='itemsVm.item.unidad_medida' name='unidad_medida' required)
+          select(ng-model='modalVm.item.unidad_medida' name='unidad_medida' required)
             option(value='volumen') Volumen
             option(value='unidades') Unidades
             option(value='longitud') Longitud
         .errors-wrapper    
-          span.show-errors(ng-messages="itemsVm.itemForm.unidad_medida.$error" ng-if="itemsVm.itemForm.unidad_medida.$touched")
+          span.show-errors(ng-messages="modalVm.itemForm.unidad_medida.$error" ng-if="modalVm.itemForm.unidad_medida.$touched")
             span(ng-message="required" class="message-error") {{::("globals.isRequired"|translate)}}
-          show-error(array-messages='itemsVm.messages.unidad_medida')
+          show-error(array-messages='modalVm.messages.unidad_medida')
 
         label.item.item-input.item-stacked-label
           span.input-label {{::("item.volumen"|translate)}}
           input(
             type='text'
-            ng-model='itemsVm.item.volumen'
+            ng-model='modalVm.item.volumen'
           )
-        show-error(array-messages='itemsVm.messages.volumen')
+        .errors-wrapper
+          show-error(array-messages='modalVm.messages.volumen')
 
         label.item.item-input.item-stacked-label(
-          ng-class="{'item-error': itemsVm.itemForm.precio.$touched && itemsVm.itemForm.precio.$invalid}"
+          ng-class="{'item-error': modalVm.itemForm.precio.$touched && modalVm.itemForm.precio.$invalid}"
         )
           span.input-label {{::("item.precio"|translate)}}
           input(
@@ -79,27 +82,29 @@ ion-modal-view.item-form
             name='precio'
             step='any'
             type='number'
-            ng-model='itemsVm.item.precio'
+            ng-model='modalVm.item.precio'
             required
           )
         .errors-wrapper
-          span.show-errors(ng-messages="itemsVm.itemForm.precio.$error" ng-if="itemsVm.itemForm.precio.$touched")
-            span(ng-message="required" class="message-error") {{::("globals.isRequired"|translate)}}
-          show-error(array-messages='itemsVm.messages.precio')
+          span.show-errors(ng-messages="modalVm.itemForm.precio.$error" ng-if="modalVm.itemForm.precio.$touched")
+            span.message-error(ng-message="required")
+              | {{::("globals.isRequired"|translate)}}
+          show-error(array-messages='modalVm.messages.precio')
 
         label.item.item-input.item-stacked-label
           span.input-label {{::("item.peso"|translate)}}
           input(
             type='text'
-            ng-model='itemsVm.item.peso'
+            ng-model='modalVm.item.peso'
           )
-        show-error(array-messages='itemsVm.messages.peso')
+        .errors-wrapper
+          show-error(array-messages='modalVm.messages.peso')
 
         label.item.item-input.item-input--no-borders.item-stacked-label
           span.input-label {{::("item.imagen"|translate)}}
         .uploader(
-          ng-if="itemsVm.images.length === 0"
-          ngf-select="itemsVm.concatImages($files)"
+          ng-if="modalVm.item.imagenes.length === 0"
+          ngf-select="modalVm.concatImages($files)"
           accept="image/*"
           multiple
         )
@@ -108,21 +113,21 @@ ion-modal-view.item-form
 
         .row.images-previews
           .img-wrapper.col-33(
-            ng-repeat="image in itemsVm.imagesUrls"
+            ng-repeat="image in modalVm.imagesUrls"
           )
             img(ngf-src="image")
           
-          .img-wrapper.col-33(ng-if="itemsVm.images.length > 0")
+          .img-wrapper.col-33(ng-if="modalVm.item.imagenes.length > 0")
             .add-image-placeholder(
-              ngf-select="itemsVm.concatImages($files)"
+              ngf-select="modalVm.concatImages($files)"
               accept="image/*"
               multiple
             )
               i.ion-plus
-        show-error(array-messages='itemsVm.messages.imagen')
+        show-error(array-messages='modalVm.messages.imagen')
 
     .bar.bar-footer.bar-stable
       button.button.button-small.button-outline.button-energized(
         type="submit"
-        ng-disabled="itemsVm.itemForm.$invalid"
+        ng-disabled="modalVm.itemForm.$invalid"
       ) {{::("item.publishItem"|translate)}}
