--- a/app/styles/overrides/bar-footer.scss
+++ b/app/styles/overrides/bar-footer.scss
@@ -7,3 +7,15 @@
   padding: 0 30px;
   line-height: 28px;
 }
+
+.bar .button.button-xsmall {
+  padding: 0 20px;
+  line-height: 25px;
+}
+
+.bar-footer {
+  .side-by-side {
+    display: inline-block;
+    margin: auto;
+  }
+}
