--- a/app/templates/client/new-edit.jade
+++ b/app/templates/client/new-edit.jade
@@ -1,27 +1,20 @@
-ion-modal-view.item-page
-  ion-header-bar.bar-stable.bar.bar-header(
-    align-title="center"
-  )
-    .ion-nav-buttons(side="left")
-      button.button.ion-chevron-left.button-clear.left(
-        ng-click="clientsVm.closeModal()"
-      )
+ion-modal-view
+  ion-header-bar.bar-stable.bar.bar-header
     .title.alt-logo
-  ion-content.resource-form
-    form(
-      name="clientsVm.clientForm"
-      ng-submit="clientsVm.submitProcess(clientsVm.client.id)"
-      novalidate
-    )
+    
+    .ion-nav-buttons.buttons(side="primary")
+      button.button.button-clear.button-positive(
+        ng-click="clientsVm.closeModal()"
+      ) {{::('globals.cancel'|translate)}}
+
+  form(
+    name="clientsVm.clientForm"
+    ng-submit="clientsVm.submitProcess(clientsVm.client.id)"
+    novalidate
+  )
+    ion-content.resource-form
       .list.list-inset
         legend {{::("client.formLegend"|translate)}}
-
-        label.item.item-input.item-stacked-label
-          span.input-label {{::("client.notas"|translate)}}
-          input(
-            type="text"
-            ng-model="clientsVm.client.notas"
-          )
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': clientsVm.clientForm.ruc.$touched && cliensVm.clientForm.ruc.$invalid}"
@@ -34,9 +27,14 @@ ion-modal-view.item-page
             ng-model="clientsVm.client.ruc"
             required
           )
-        .show-errors(ng-messages="clientsVm.clientForm.ruc.$error" ng-if="clientsVm.clientForm.ruc.$touched")
-          span(ng-message="required" class="message-error") {{::("globals.isRequired"|translate)}}
-        show-error(array-messages="clientsVm.messages.ruc")
+        .errors-wrapper
+          span.show-errors(
+            ng-messages="clientsVm.clientForm.ruc.$error"
+            ng-if="clientsVm.clientForm.ruc.$touched"
+          )
+            span.message-error(ng-message="required")
+              | {{::("globals.isRequired"|translate)}}.
+          show-error(array-messages="clientsVm.messages.ruc")
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': clientsVm.clientForm.nombres.$touched && cliensVm.clientForm.nombres.$invalid}"
@@ -49,9 +47,14 @@ ion-modal-view.item-page
             ng-model="clientsVm.client.nombres"
             required
           )
-        .show-errors(ng-messages="clientsVm.clientForm.nombres.$error" ng-if="clientsVm.clientForm.nombres.$touched")
-          span(ng-message="required" class="message-error") {{::("globals.isRequired"|translate)}}
-        show-error(array-messages="clientsVm.messages.nombres")
+        .errors-wrapper
+          span.show-errors(
+            ng-messages="clientsVm.clientForm.nombres.$error" 
+            ng-if="clientsVm.clientForm.nombres.$touched"
+          )
+            span.message-error(ng-message="required")
+              | {{::("globals.isRequired"|translate)}}.
+          show-error(array-messages="clientsVm.messages.nombres")
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': clientsVm.clientForm.direccion.$touched && cliensVm.clientForm.direccion.$invalid}"
@@ -64,14 +67,19 @@ ion-modal-view.item-page
             ng-model="clientsVm.client.direccion"
             required
           )
-        .show-errors(ng-messages="clientsVm.clientForm.direccion.$error" ng-if="clientsVm.clientForm.direccion.$touched")
-          span(ng-message="required" class="message-error") {{::("globals.isRequired"|translate)}}
-        show-error(array-messages="clientsVm.messages.direccion")
+        .errors-wrapper
+          span.show-errors(
+            ng-messages="clientsVm.clientForm.direccion.$error"
+            ng-if="clientsVm.clientForm.direccion.$touched"
+          )
+            span.message-error(ng-message="required")
+              | {{::("globals.isRequired"|translate)}}.
+          show-error(array-messages="clientsVm.messages.direccion")
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': clientsVm.clientForm.telefono.$touched && cliensVm.clientForm.telefono.$invalid}"
         )
-          span.input-label {{::("client.telefono"|translate|uppercase)}}
+          span.input-label {{::("client.telefono"|translate)}}
           input(
             name="telefono"
             type="tel"
@@ -79,14 +87,19 @@ ion-modal-view.item-page
             ng-model="clientsVm.client.telefono"
             required
           )
-        .show-errors(ng-messages="clientsVm.clientForm.telefono.$error" ng-if="clientsVm.clientForm.telefono.$touched")
-          span(ng-message="required" class="message-error") {{::("globals.isRequired"|translate)}}
-        show-error(array-messages="clientsVm.messages.telefono")
+        .errors-wrapper
+          span.show-errors(
+            ng-messages="clientsVm.clientForm.telefono.$error" 
+            ng-if="clientsVm.clientForm.telefono.$touched"
+          )
+            span.message-error(ng-message="required")
+              | {{::("globals.isRequired"|translate)}}.
+          show-error(array-messages="clientsVm.messages.telefono")
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': clientsVm.clientForm.email.$touched && cliensVm.clientForm.email.$invalid}"
         )
-          span.input-label {{::("client.email"|translate|uppercase)}}
+          span.input-label {{::("client.email"|translate)}}
           input(
             name="email"
             type="email"
@@ -94,17 +107,26 @@ ion-modal-view.item-page
             ng-model="clientsVm.client.email"
             required
           )
-        .show-errors(ng-messages="clientsVm.clientForm.email.$error" ng-if="clientsVm.clientForm.email.$touched")
-          span(ng-message="required" class="message-error") {{::("globals.isRequired"|translate)}}
-        show-error(array-messages="clientsVm.messages.email")
+        .errors-wrapper
+          span.show-errors(
+            ng-messages="clientsVm.clientForm.email.$error" 
+            ng-if="clientsVm.clientForm.email.$touched"
+          )
+            span.message-error(ng-message="required")
+              | {{::("globals.isRequired"|translate)}}.
+          show-error(array-messages="clientsVm.messages.email")
+        
+        label.item.item-input.item-stacked-label
+          span.input-label {{::("client.notas"|translate)}}
+          input(
+            type="text"
+            ng-model="clientsVm.client.notas"
+          )
+        .errors-wrapper
+          show-error(array-messages="clientsVm.messages.notas")
 
-      .bar.bar-footer.footer-client-container
-        button.button-secondary-yellow(
-          type="submit"
-          ng-disabled="clientsVm.clientForm.$invalid"
-        ) {{::("globals.save"|translate)}}
-        button.button-secondary-red(
-          ng-click="clientsVm.deleteClient(clientsVm.client.id)"
-          ng-show="clientsVm.client.id"
-          type="button"
-        ) {{::("client.unsubscribe"|translate)}}
+    .bar.bar-footer.bar-stable
+      button.button.button-small.button-outline.button-energized(
+        type="submit"
+        ng-disabled="clientsVm.clientForm.$invalid"
+      ) {{::("globals.save"|translate)}}
