--- a/app/templates/offices/new-edit.jade
+++ b/app/templates/offices/new-edit.jade
@@ -1,35 +1,38 @@
-ion-modal-view.item-page
-  ion-header-bar.bar-stable.bar.bar-header(
-    align-title="center"
-  )
-    .ion-nav-buttons(side="left")
-      button.button.ion-chevron-left.button-clear.left(
-        ng-click="officesVm.closeModal()"
-      )
+ion-modal-view
+  ion-header-bar.bar-stable.bar.bar-header
     .title.alt-logo
-  ion-content.resource-form
-    form(
-      name='officesVm.form'
-      ng-submit='officesVm.submitOffice()'
-      novalidate
-    )
+
+    .ion-nav-buttons.buttons(side="primary")
+      button.button.button-clear.button-positive(
+        ng-click="officesVm.closeModal()"
+      ) {{::('globals.cancel'|translate)}}
+
+  form(
+    name='officesVm.form'
+    ng-submit='officesVm.submitOffice()'
+    novalidate
+  )
+    ion-content.resource-form
       .list.list-inset
-        legend(ng-hide="officesVm.office.id").title {{::("globals.new"|translate)}} {{::("office.office"|translate)}}
-        legend(ng-show="officesVm.office.id").title {{::("globals.edit"|translate)}} {{::("office.office"|translate)}}
+        legend(ng-if="!officesVm.office.id").title
+          | {{::("globals.new"|translate)}} {{::("office.office"|translate)}}
+        legend(ng-if="officesVm.office.id").title
+          | {{::("globals.edit"|translate)}} {{::("office.office"|translate)}}
 
         label.item.item-input.item-stacked-label
-          span.input-label {{::("office.ciudad"|translate|uppercase)}}
+          span.input-label {{::("office.ciudad"|translate)}}
           input(
             type="text"
             ng-class="input-error"
             ng-model="officesVm.office.ciudad"
           )
-        show-error(array-messages="officesVm.messages.ciudad")
+        .errors-wrapper
+          show-error(array-messages="officesVm.messages.ciudad")
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': officesVm.form.direccion.$touched && officesVm.form.direccion.$invalid}"
-          )
-          span.input-label {{::("office.direccion"|translate|uppercase)}}
+        )
+          span.input-label {{::("office.direccion"|translate)}}
           input(
             type='text'
             name='direccion'
@@ -37,14 +40,19 @@ ion-modal-view.item-page
             ng-class="input-error"
             required
           )
-          .show-errors(ng-messages="officesVm.form.direccion.$error" ng-if="officesVm.form.direccion.$touched")
-            span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
-        show-error(array-messages="officesVm.messages.direccion")
+        .errors-wrapper
+          span.show-errors(
+            ng-messages="officesVm.form.direccion.$error"
+            ng-if="officesVm.form.direccion.$touched"
+          )
+            span.message-error(ng-message="required")
+              | {{::("form.requiredField"|translate)}}
+          show-error(array-messages="officesVm.messages.direccion")
 
         label.item.item-input.item-stacked-label(
           ng-class="{'item-error': officesVm.form.telefono.$touched && officesVm.form.telefono.$invalid}"
           )
-          span.input-label {{::("office.telefono"|translate|uppercase)}}
+          span.input-label {{::("office.telefono"|translate)}}
           input(
             type='text'
             name='telefono'
@@ -52,9 +60,14 @@ ion-modal-view.item-page
             ng-class="input-error"
             required
           )
-          .show-errors(ng-messages="officesVm.form.telefono.$error" ng-if="officesVm.form.telefono.$touched")
-            span.message-error(ng-message="required") {{::("form.requiredField"|translate)}}
-        show-error(array-messages='officesVm.messages.telefono')
+        .errors-wrapper
+          span.show-errors(
+            ng-messages="officesVm.form.telefono.$error"
+            ng-if="officesVm.form.telefono.$touched"
+          )
+            span.message-error(ng-message="required")
+              | {{::("form.requiredField"|translate)}}
+          show-error(array-messages='officesVm.messages.telefono')
 
         label.item.item-input.item-select
           span.input-label {{::("office.officeStart"|translate)}}
@@ -70,22 +83,46 @@ ion-modal-view.item-page
               option(value=day)
                 | {{::("office.#{day}"|translate)}}
 
-        ion-datetime-picker.content-office-datetime(time ng-model='officesVm.office.hora_de_apertura')
-          label.item.item-input.item-stacked-label
-            span.input-label {{::("office.horaApertura"|translate|uppercase)}}
-            span(ng-if="!officesVm.office.hora_de_apertura") {{::("office.placeholderDate"|translate)}}
-            | {{officesVm.office.hora_de_apertura| date: 'HH:mm a'}}
-        show-error(array-messages='officesVm.messages.hora_de_apertura')
+        ion-datetime-picker.datetime-picker(
+          time
+          ng-model='officesVm.office.hora_de_apertura'
+        )
+          label.item.item-input.item-stacked-label(
+            ng-class="{'item-error': officesVm.messages.hora_de_apertura}"
+          )
+            span.input-label
+              | {{::("office.horaApertura"|translate)}}
+            
+            .datetime-picker-placeholder(
+              ng-if="!officesVm.office.hora_de_apertura"
+            ) {{::("office.selectHourPlaceholder"|translate)}}
 
-        ion-datetime-picker.content-office-datetime(time ng-model='officesVm.office.hora_de_cierre')
-          label.item.item-input.item-stacked-label
-            span.input-label {{::("office.horaCierre"|translate|uppercase)}}
-            span(ng-if="!officesVm.office.hora_de_cierre") {{::("office.placeholderDate"|translate)}}
-            | {{officesVm.office.hora_de_cierre| date: 'HH:mm a'}}
-        show-error(array-messages='officesVm.messages.hora_de_cierre')
+            .datetime-picker-value
+              | {{officesVm.office.hora_de_apertura|date: 'HH:mm a'}}
+        .errors-wrapper
+          show-error(array-messages='officesVm.messages.hora_de_apertura')
 
-      .bar.bar-footer
-        .row.col.text-center
-          button.action-button.yellow(
-            type="submit"
-          ) {{::("globals.save"|translate)}}
+        ion-datetime-picker.datetime-picker(
+          time
+          ng-model='officesVm.office.hora_de_cierre'
+        )
+          label.item.item-input.item-stacked-label(
+            ng-class="{'item-error': officesVm.messages.hora_de_cierre}"
+          )
+            span.input-label
+              | {{::("office.horaCierre"|translate)}}
+            
+            .datetime-picker-placeholder(
+              ng-if="!officesVm.office.hora_de_cierre"
+            ) {{::("office.selectHourPlaceholder"|translate)}}
+            
+            .datetime-picker-value
+              | {{officesVm.office.hora_de_cierre|date: 'HH:mm a'}}
+        .errors-wrapper
+          show-error(array-messages='officesVm.messages.hora_de_cierre')
+
+    .bar.bar-footer.bar-stable
+      button.button.button-small.button-outline.button-energized(
+        type="submit"
+        ng-disabled="officesVm.form.$invalid"
+      ) {{::("globals.save"|translate)}}
