--- a/app/styles/forms/resource-form.scss
+++ b/app/styles/forms/resource-form.scss
@@ -19,7 +19,20 @@
       color: $error-red;
     }
   }
-
+  div.item.item-toggle{
+    padding: 6px 0 5px 5px;
+    margin-top: 15px;
+    margin-bottom: 2px;
+    // hide borders
+    border-left: none;
+    border-right: none;
+    border-top: none;
+    .input-label {
+      font-size: 14px;
+      text-transform: uppercase;
+      font-family: Montserrat-Regular;
+    }
+  }
   label.item-input.item-stacked-label,
   label.item-input.item-select,
   label.item-input.item-radio {
