--- a/app/styles/item/show.scss
+++ b/app/styles/item/show.scss
@@ -3,6 +3,8 @@
 
   .item.item-toggle {
     border: 0;
+    display: inline-block;
+
     @media (max-width: $grid-responsive-sm-break) {
       padding-left: 0;
     }
@@ -23,10 +25,13 @@
 
     .slick-content {
       margin-bottom: 10px;
+      padding-left: 10px;
+      padding-right: 10px;
     }
 
     img {
       max-height: 400px;
+      max-width: 100%;
       margin: auto;
     }
   }
