--- a/app/templates/item/new-edit.jade
+++ b/app/templates/item/new-edit.jade
@@ -105,6 +105,7 @@ ion-modal-view.item-form
         .uploader(
           ng-if="modalVm.item.imagenes.length === 0"
           ngf-select="modalVm.concatImages($files)"
+          ngf-capture="'camera'"
           accept="image/*"
           multiple
         )
@@ -120,6 +121,7 @@ ion-modal-view.item-form
           .img-wrapper.col-33(ng-if="modalVm.item.imagenes.length > 0")
             .add-image-placeholder(
               ngf-select="modalVm.concatImages($files)"
+              ngf-capture="'camera'"
               accept="image/*"
               multiple
             )
